# hst-c

./: .clang-format  .gitignore  .travis.yml  COPYING  Makefile.am  README  README.md  autogen.sh  configure.ac
.travis/: test.sh
include/: hst.h
src/: basics.h  behavior.c  behavior.h  csp0.c  csp0.h  denotational.c  denotational.h  environment.c  environment.h  equivalence.c  equivalence.h  event.c  event.h  hst.h  id-map.c  id-map.h  id-pair.c  id-pair.h  id-set-map.c  id-set-map.h  id-set.c  id-set.h  judy-malloc.c  macros.h  map.c  map.h  normalization.c  normalization.h  normalized-lts.c  normalized-lts.h  operators.h  process.c  process.h  refinement.c  refinement.h  set.c  set.h  string-map.c  string-map.h
src/hst/: has-trace.c.in  hst.c  reachable.c.in  traces.c.in
src/libhst/: behavior.c  csp0.c  denotational.c  environment.c  id-pair.c  id-set.c  normalized-lts.c  refinement.c
src/libhst/operators/: external-choice.c  internal-choice.c  prefix.c  recursion.c  sequential-composition.c
src/operators/: external-choice.c  interleave.c  internal-choice.c  prefix.c  recursion.c  recursion.h  sequential-composition.c
tests/: test-bfs.c  test-case-harness.h  test-cases.h  test-csp0.c  test-denotational.c  test-environment.c  test-equivalences.c  test-event-sets.c  test-events.c  test-id-maps.c  test-id-pairs.c  test-id-set-maps.c  test-id-sets.c  test-operators.c  test-process-sets.c  test-refinement.c  test-string-maps.c
